--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
    <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
@@ -39,13 +39,13 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                <div class="row align-items-center">
-                   <div class="col-md-7">
+                   <div class="col-md-7 col-7">
                        <h1>Mega LCD TV for Sports</h1>
                        <p>This is the best tv for the people who love to feel the real field excitement before the big screen.</p>
                       <h1 class="price">$1200</h1>
                       <button class="buy-now-button">Buy Now</button>
                    </div>
-                   <div class="col-md-5">
+                   <div class="col-md-5 	col-5">
                     <img img-fluid src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                    </div>
                </div>
