--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       <button class="buy-now-button">Buy Now</button>
                    </div>
                    <div class="col-md-5 	col-5">
-                    <img img-fluid src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    <img  src="images/banner-images/tv.png" class="d-block w-100 img-fluid" alt="...">
                    </div>
                </div>
               </div>
@@ -59,7 +59,7 @@
                        <button class="buy-now-button">Buy Now</button>
                       </div>
                       <div class="col-md-5">
-                          <img img-fluid src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                          <img src="images/banner-images/headphone.png" class="d-block w-100 img-fluid" alt="...">
                     </div>
                   </div>
               </div>
@@ -72,7 +72,7 @@
                        <button class="buy-now-button">Buy Now</button>
                       </div>
                       <div class="col-md-5">
-                          <img img-fluid src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                          <img src="images/banner-images/xbox.png" class="d-block w-100 img-fluid" alt="...">
                     </div>
                   </div>     
               </div>
