--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                <div class="row align-items-center">
-                   <div class="col-md-7 col-7">
+                   <div class="col-md-7">
                        <h1>Mega LCD TV for Sports</h1>
                        <p>This is the best tv for the people who love to feel the real field excitement before the big screen.</p>
                       <h1 class="price">$1200</h1>
                       <button class="buy-now-button">Buy Now</button>
                    </div>
-                   <div class="col-md-5 	col-5">
+                   <div class="col-md-5">
                     <img  src="images/banner-images/tv.png" class="d-block w-100 img-fluid" alt="...">
                    </div>
                </div>
