--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       <button class="buy-now-button">Buy Now</button>
                    </div>
                    <div class="col-md-5">
-                    <img  src="images/banner-images/tv.png" class="d-block w-100 img-fluid" alt="...">
+                    <img  src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                    </div>
                </div>
               </div>
@@ -59,7 +59,7 @@
                        <button class="buy-now-button">Buy Now</button>
                       </div>
                       <div class="col-md-5">
-                          <img src="images/banner-images/headphone.png" class="d-block w-100 img-fluid" alt="...">
+                          <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                     </div>
                   </div>
               </div>
@@ -72,7 +72,7 @@
                        <button class="buy-now-button">Buy Now</button>
                       </div>
                       <div class="col-md-5">
-                          <img src="images/banner-images/xbox.png" class="d-block w-100 img-fluid" alt="...">
+                          <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                     </div>
                   </div>     
               </div>
@@ -191,7 +191,7 @@
           </div>
        </div>
        <footer>
-         <small>©Panda Commerce. All rights reserved. Sofia, Bulgeria </>
+         <small>©Panda Commerce. All rights reserved. Sofia, Bulgeria </small>
        </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
