--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       <button class="buy-now-button">Buy Now</button>
                    </div>
                    <div class="col-md-5">
-                    <img  src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                    </div>
                </div>
               </div>
@@ -93,19 +93,19 @@
                <div class="col-md-4">
                    <div class="cat1 d-flex justify-content-between align-items-center">
                     <h1>Watch</h1>
-                    <img img-fluid src="images/categories/watch.png" alt="">
+                    <img src="images/categories/watch.png" alt="">
                    </div> 
                </div>
                <div class="col-md-4">
                   <div class="cat2 d-flex justify-content-between align-items-center">
                     <h1>Bag</h1>
-                    <img img-fluid src="images/categories/bag.png" alt="">
+                    <img src="images/categories/bag.png" alt="">
                   </div>
                </div>
                <div class="col-md-4">
                <div class="cat3 d-flex justify-content-between align-items-center">
                 <h1>Shoes</h1>
-                <img img-fluid src="images/categories/shoes.png" alt="">
+                <img src="images/categories/shoes.png" alt="">
                </div>
                </div>
            </div>
@@ -114,7 +114,7 @@
          <h3>Shoes</h3>
          <div class="card-deck">
           <div class="card">
-            <img img-fluid src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Supply 350</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -123,7 +123,7 @@
             </div>
           </div>
           <div class="card">
-            <img img-fluid src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nike 360</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -132,7 +132,7 @@
             </div>
           </div>
           <div class="card">
-            <img img-fluid src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Airmax</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -147,7 +147,7 @@
          <h3>Backpack</h3>
          <div class="card-deck">
           <div class="card">
-            <img img-fluid src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Back</h5>
               <h5>$120</h5>
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div class="card">
-            <img img-fluid src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Blue Backpack</h5>
               <h5>$320</h5>
@@ -169,7 +169,7 @@
             </div>
           </div>
           <div class="card">
-            <img img-fluid src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Best Black</h5>
               <h5>$169</h5>
